force-app/main/default/objects/cazoomi__List_Members_Lead__c/cazoomi__List_Members_Lead__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to store the lead members of marketing list</description>
    <label>List Members - Lead</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>