force-app/main/default/objects/cazoomi__List_Members_Lead__c/fields/cazoomi__Lead__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>List Membership</relationshipLabel>
    <relationshipName>List_Members_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>