force-app/main/default/objects/cazoomi__List_Members_Lead__c/fields/cazoomi__Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Marketing_List__c</fullName>
    <label>Marketing List</label>
    <referenceTo>cazoomi__Marketing_List__c</referenceTo>
    <relationshipLabel>List Members - Lead</relationshipLabel>
    <relationshipName>List_Members_Lead</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>